--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
     <li></li>
     <li></li>
   </ul>
+  <span>Link do repositório:</span>
+  <a href="https://github.com/InfraSchools">Clique aqui para ser redirecionado ao repositório do projeto</a>
  </section>
 
 
@@ -231,20 +233,20 @@
 
   <div class="container">
 	  <div class="row">
-	    <div class="col sm">
+	    <div class="col-sm">
 	      1 of 3
 	    </div>
-	    <div class="col sm">
+	    <div class="col-sm">
 	      2 of 3
 	    </div>
-	    <div class="col sm">
+	    <div class="col-sm">
 	      <h4>Send us a message</h4>
 
 
 	      <form action="mail.php" method="post">
                         <div class="card border-primary rounded-0">
                            
-                            <div class="">
+                            <div class="card-body p-3">
 
                                 <!--Body-->
                                 <div class="form-group">
