--- a/deliveries.html
+++ b/deliveries.html
@@ -72,22 +72,79 @@
     </header>
 
 
-<section>
+<section class="deliveriesdiv">
   <h1> Deliveries about project</h2>
 </section>
 
 <!-- [End team ]==========================================================================================================--> 
 
-<!-- [Start contact ]=======================================================================================================--> <section class="contact">
-  <h2 id="titlecontact" >Contact</h2> 
-  <hr> 
+<!-- [Start contact ]=======================================================================================================--> 
+<section class="contact"> 
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+         <h5>About us</h5>
+         <hr>
+         <p>
+        Team assembled to analyze and apply data science to available school data in Brazil, looking for the relationship between school infrastructure and student achievement</p>
+      </div>
+
+      <div class="col-sm">
+        <h5>Important links/contact</h5>
+        <hr>
+        <ul>
+          <li><a href="https://github.com/infraSchools">Github</a></li>
+        </ul>
+
+     
+      </div>
+
+      <div class="col-sm">
+        <h5>Send us a message</h5>
+        <hr>
+
+        <form role="form" method="POST" action="https://formspree.io/kimbellyferraz@gmail.com">
+          <div class="form-group">
+            <div class="input-group mb-2">
+                  <div class="input-group-prepend">
+                        <div class="input-group-text"><i class="fa fa-user text-info"></i></div>
+                    </div>
+                  <input type="text" class="form-control" id="nameformcontact" name="nameformcontact" placeholder="name and username" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group mb-2">
+                    <div class="input-group-prepend">
+                            <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
+                    </div>
+                  <input type="email" class="form-control" id="nameformcontact" name="email" placeholder="ejemplo@gmail.com" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group mb-2">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text"><i class="fa fa-comment text-info"></i></div>
+                    </div>
+                    <textarea class="form-control" placeholder="Message here" required></textarea>
+                </div>
+            </div>
+
+            <div class="text-center">
+                <input type="submit" value="Send" class="btn btn-info btn-block rounded-0 py-2">
+            </div>
+        </form>
+      </div>
+        
+      </div>
+    </div>
+ </div> 
+
+
 </section>
 
 
-
-<!-- [End contact ]==========================================================================================================--> 
-
-
+<!-- [End contact ]=========================================================================================================--> 
 
 
     <footer>
